# winspice

./: CMakeLists.txt  README  TODO
src/: display.c  display.h  gui.c  gui.h  main.c  memory.c  memory.h  options.c  options.h  server.c  server.h  session.c  session.h  wspice.c  wspice.h
